Remove zinc integration